@@ -6,9 +6,9 @@ import com.atlassian.clover.eclipse.core.views.testrunexplorer.nodes.TestCaseNod
 import org.eclipse.jface.viewers.Viewer;
 
 public abstract class TestRunExplorerTreeComparator extends ExplorerViewComparator {
-    protected static final Long ZERO_LONG = new Long(0);
-    protected static final Double ZERO_DOUBLE = new Double(0.0);
-    protected static final Integer MAX_INTEGER = new Integer(Integer.MAX_VALUE);
+    protected static final Long ZERO_LONG = 0L;
+    protected static final Double ZERO_DOUBLE = 0.0;
+    protected static final Integer MAX_INTEGER = Integer.MAX_VALUE;
 
     public static TestRunExplorerTreeComparator createFor(final TestRunExplorerViewSettings settings) {
         final ColumnDefinition column = settings.getTreeColumnSettings().getSortedColumn();
@@ -41,8 +41,8 @@ public abstract class TestRunExplorerTreeComparator extends ExplorerViewComparat
     public static int compareStarted(Object value1, Object value2) {
         TestCaseNode testCase1 = toTestCaseNode(value1);
         TestCaseNode testCase2 = toTestCaseNode(value2);
-        Long started1 = testCase1 == null ? ZERO_LONG : new Long(testCase1.getStartTime());
-        Long started2 = testCase2 == null ? ZERO_LONG : new Long(testCase2.getStartTime());
+        Long started1 = testCase1 == null ? ZERO_LONG : Long.valueOf(testCase1.getStartTime());
+        Long started2 = testCase2 == null ? ZERO_LONG : Long.valueOf(testCase2.getStartTime());
         return started1.compareTo(started2);
     }
 
@@ -52,12 +52,12 @@ public abstract class TestRunExplorerTreeComparator extends ExplorerViewComparat
         Integer status1 =
             testCase1 == null
                 ? MAX_INTEGER
-                : new Integer(testCase1.getStatus());
+                : Integer.valueOf(testCase1.getStatus());
 
         Integer status2 =
             testCase2 == null
                 ? MAX_INTEGER
-                : new Integer(testCase2.getStatus());
+                : Integer.valueOf(testCase2.getStatus());
 
         return status1.compareTo(status2);
     }
@@ -65,8 +65,8 @@ public abstract class TestRunExplorerTreeComparator extends ExplorerViewComparat
     public static int compareTime(Object value1, Object value2) {
         TestCaseNode testCase1 = toTestCaseNode(value1);
         TestCaseNode testCase2 = toTestCaseNode(value2);
-        Double time1 = testCase1 == null ? ZERO_DOUBLE : new Double(testCase1.getDurationInSeconds());
-        Double time2 = testCase2 == null ? ZERO_DOUBLE : new Double(testCase2.getDurationInSeconds());
+        Double time1 = testCase1 == null ? ZERO_DOUBLE : Double.valueOf(testCase1.getDurationInSeconds());
+        Double time2 = testCase2 == null ? ZERO_DOUBLE : Double.valueOf(testCase2.getDurationInSeconds());
         return time1.compareTo(time2);
     }
 
